ajustando estilização dos post e posicionado os elementos

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
         autofocus
       />
     </div>
-
+    <script>
+      adicionarPosts()
+    </script>
     <div id="posts-container"></div>
 
     <div class="loader">
